# CITS3003-Project

./: CMakeLists.txt  README.md  report_24214277_24217857.md
config/: imgui.ini
docs/: CITS3003 Computer Graphics and Animation.html  Homepage.html
docs/Documentation_Pages/: BaseLitEntityShader.cpp.html  FileSummaries.html  FlyingCamera.cpp.html  FunctionHierarchy.html  Lights.cpp.html  Lights.h.html  PanningCamera.cpp.html  PointLightElement.cpp.html  SceneElement.cpp.html  Style.css  frag.glsl (animated_entity).html  frag.glsl (emissive_entity).html  frag.glsl (entity).html  lights.glsl.html  vert.glsl (animated_entity).html  vert.glsl (emissive_entity).html  vert.glsl (entity).html
docs/media/: task_clip_after.webm  task_clip_before.webm
res/shaders/animated_entity/: frag.glsl  vert.glsl
res/shaders/common/: lights.glsl
res/shaders/entity/: frag.glsl  vert.glsl
src/rendering/cameras/: FlyingCamera.cpp  PanningCamera.cpp  PanningCamera.h
src/rendering/renders/shaders/: BaseLitEntityShader.cpp
src/rendering/scene/: Lights.h
src/scene/editor_scene/: AnimatedEntityElement.cpp  EmissiveEntityElement.cpp  EntityElement.cpp  PointLightElement.cpp  SceneElement.cpp
